--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-label": "^2.1.0",
-    "@tabler/icons-react": "^3.6.0",
+    "@nextui-org/react": "^2.4.2",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.11",
     "next": "14.2.4",
